test/tests/stages/15_arrays_and_pointer_arithmetic/valid/extra_credit/compound_assign_to_nested_subscript.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[4]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: long_nested_arr
        CCompoundInit: 
          List[2]: 
            CCompoundInit: 
              List[3]: 
                CSingleInit: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                  None: 
                CSingleInit: 
                  CConstant: 
                    CConstInt: 
                      TInt: 2
                    None: 
                  None: 
                CSingleInit: 
                  CConstant: 
                    CConstInt: 
                      TInt: 3
                    None: 
                  None: 
              None: 
            CCompoundInit: 
              List[3]: 
                CSingleInit: 
                  CConstant: 
                    CConstInt: 
                      TInt: 4
                    None: 
                  None: 
                CSingleInit: 
                  CConstant: 
                    CConstInt: 
                      TInt: 5
                    None: 
                  None: 
                CSingleInit: 
                  CConstant: 
                    CConstInt: 
                      TInt: 6
                    None: 
                  None: 
              None: 
          None: 
        Array: 
          TLong: 2
          Array: 
            TLong: 3
            Long: 
        None: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: dbl_nested_arr
        CCompoundInit: 
          List[3]: 
            CCompoundInit: 
              List[2]: 
                CSingleInit: 
                  CConstant: 
                    CConstDouble: 
                      TDouble: 100.000000
                    None: 
                  None: 
                CSingleInit: 
                  CConstant: 
                    CConstDouble: 
                      TDouble: 101.000000
                    None: 
                  None: 
              None: 
            CCompoundInit: 
              List[2]: 
                CSingleInit: 
                  CConstant: 
                    CConstDouble: 
                      TDouble: 102.000000
                    None: 
                  None: 
                CSingleInit: 
                  CConstant: 
                    CConstDouble: 
                      TDouble: 103.000000
                    None: 
                  None: 
              None: 
            CCompoundInit: 
              List[2]: 
                CSingleInit: 
                  CConstant: 
                    CConstDouble: 
                      TDouble: 104.000000
                    None: 
                  None: 
                CSingleInit: 
                  CConstant: 
                    CConstDouble: 
                      TDouble: 105.000000
                    None: 
                  None: 
              None: 
          None: 
        Array: 
          TLong: 3
          Array: 
            TLong: 2
            Double: 
        None: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: unsigned_index
        CSingleInit: 
          CConstant: 
            CConstInt: 
              TInt: 10
            None: 
          None: 
        UInt: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[6]: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CAssignment: 
                    None: 
                    None: 
                    CBinary: 
                      CMultiply: 
                      CSubscript: 
                        CSubscript: 
                          CVar: 
                            TIdentifier: long_nested_arr
                            None: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                          Non